// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled 1`] = `
<React.Fragment>
  <TextInput
    className="StartCisloInput__input"
    enabled={false}
    inputRef={[Function]}
    onChange={[Function]}
    value=""
  />
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="large"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      >
        Výběr startovního čísla
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <VyberStartCislo
        onSelect={[Function]}
        typ="cyklo"
      />
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={false}
        onClick={[Function]}
      >
        Zavřít
      </Button>
    </ModalFooter>
  </Modal>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="info"
    className="StartCisloInput__button"
    disabled={true}
    onClick={[Function]}
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="plus"
    />
     Vybrat
  </Button>
</React.Fragment>
`;

exports[`renders not showing 1`] = `
<React.Fragment>
  <TextInput
    className="StartCisloInput__input"
    enabled={true}
    inputRef={[Function]}
    onChange={[Function]}
    value="10"
  />
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="large"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      >
        Výběr startovního čísla
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <VyberStartCislo
        onSelect={[Function]}
        typ="maraton"
      />
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={false}
        onClick={[Function]}
      >
        Zavřít
      </Button>
    </ModalFooter>
  </Modal>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="info"
    className="StartCisloInput__button"
    disabled={false}
    onClick={[Function]}
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="plus"
    />
     Vybrat
  </Button>
</React.Fragment>
`;

exports[`renders showing 1`] = `
<React.Fragment>
  <TextInput
    className="StartCisloInput__input"
    enabled={true}
    inputRef={[Function]}
    onChange={[Function]}
    value="10"
  />
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="large"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      >
        Výběr startovního čísla
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <VyberStartCislo
        onSelect={[Function]}
        typ="půlmaraton"
      />
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={false}
        onClick={[Function]}
      >
        Zavřít
      </Button>
    </ModalFooter>
  </Modal>
</React.Fragment>
`;
